SFDC_LD_Packages/objects-layouts/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>