SFDC_LD_Packages/objects-layouts/main/default/objects/Case/fields/achieved__c.field-meta.xml
<CustomField>
    <fullName>achieved__c</fullName>
    <label>Percentage achieved</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>