SFDC_LD_Packages/objects-layouts/main/default/objects/Case/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <inlineHelpText>When do you expect this plan to be completed?</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>