SFDC_LD_Packages/objects-layouts/main/default/objects/Case/fields/Days_til_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_til_Due_Date__c</fullName>
    <formula>Due_Date__c - today()</formula>
    <label>Days til Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>