SFDC_LD_Packages/objects-layouts/main/default/objects/Case/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>How long is this success plan?</description>
    <inlineHelpText>How long is this success plan?</inlineHelpText>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
                <label>A Month</label>
            </value>
            <value>
                <fullName>Quarter</fullName>
                <label>A Quarter</label>
            </value>
            <value>
                <fullName>Annual</fullName>
                <label>A Year</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>