SFDC_LD_Packages/objects-layouts/main/default/objects/Case/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <label>Success Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Success_Criteria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improvement of operations deployment metrics</fullName>
            </value>
            <value>
                <fullName>Response time to service degradation or outages</fullName>
            </value>
            <value>
                <fullName>Improvement of incident Mean Time to Resolution</fullName>
            </value>
            <value>
                <fullName>Improvement of monthly uptime SLA</fullName>
            </value>
            <value>
                <fullName>Baseline deployment velocity</fullName>
            </value>
            <value>
                <fullName>New product deployment and adoption velocity</fullName>
            </value>
            <value>
                <fullName>With targeted beta product deployment and adoption velocity</fullName>
            </value>
            <value>
                <fullName>Improvement in product RFE</fullName>
            </value>
            <value>
                <fullName>Engagement for differentiated experiences or customized user content</fullName>
            </value>
            <value>
                <fullName>Improvement of new customer acquisition</fullName>
            </value>
            <value>
                <fullName>Up-sell or customer conversions</fullName>
            </value>
            <value>
                <fullName>Improvements in feature adoption</fullName>
            </value>
            <value>
                <fullName>Increase efficiency between development teams</fullName>
            </value>
            <value>
                <fullName>Reduction in QA testing complexity and test cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>