SFDC_LD_Packages/objects-layouts/main/default/objects/Case/fields/My_Case__c.field-meta.xml
<CustomField>
    <fullName>My_Case__c</fullName>
    <formula>IF(
  CreatedById =  $User.Id , 
 TRUE, 
 FALSE
)</formula>
    <label>My Created Case</label>
    <type>Checkbox</type>
</CustomField>