SFDC_LD_Packages/objects-layouts/main/default/objects/Case/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>De-Risk Operations and Deployments</fullName>
            </value>
            <value>
                <fullName>Faster Time to Market</fullName>
            </value>
            <value>
                <fullName>Customize Experiences</fullName>
            </value>
            <value>
                <fullName>Business Engagement metrics</fullName>
            </value>
            <value>
                <fullName>Maximize Engineering Productivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>