SFDC_LD_Packages/objects-layouts/main/default/objects/Case/fields/Success_Sub__c.field-meta.xml
<CustomField>
    <fullName>Success_Sub__c</fullName>
    <label>Success Sub</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Measurement__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>quarterly monthly releases</fullName>
            </value>
            <value>
                <fullName>monthly to weekly</fullName>
            </value>
            <value>
                <fullName>weekly to daily</fullName>
            </value>
            <value>
                <fullName>daily to continuous deploy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>