SFDC_LD_Packages/objects-layouts/main/default/objects/Case/listViews/All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases</fullName>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Requester__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed,Blocked</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Quote/Proposal Generation,Account Assignment,General Tools,SFDC Issue,Enablement/Onboarding,Feedback,Salesforce Request</value>
    </filters>
    <label>All Open Cases</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>