SFDC_LD_Packages/objects-layouts/main/default/objects/Case/listViews/Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Requester__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Completed,Blocked</value>
    </filters>
    <label>Closed Cases</label>
</ListView>