SFDC_LD_Packages/objects-layouts/main/default/objects/Case/listViews/My_Submitted_Open_Cases.listView-meta.xml
<ListView>
    <fullName>My_Submitted_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Waiting for Response,Approval Needed</value>
    </filters>
    <label>My Submitted Open Cases</label>
</ListView>